--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux-thunk": "^2.1.0"
   },
   "dependencies": {
+    "bower": "^1.3.2",
     "autobind-decorator": "^1.3.4",
     "babel": "^6.5.2",
     "babel-core": "^6.18.2",
